--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@ img{
     width:500px;
     height:350px;
 }
+
+.container {
+    display: flex;
+    align-items: left;
+    justify-content: center
+}
+
+img {
+max-width: 100%;
+max-height:100%;
+}
+
+.text {
+font-size: 20px;
+padding-left: 10px;
+}
