--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a:link, a:visited {
     text-align: center;
     text-decoration: none;
     border-radius: 20px;
-    display: inline-flexbox;
+    display: inline-block;
   }
   
   a:hover, a:active {
@@ -56,4 +56,11 @@ a:link, a:visited {
 
 body{
     margin:10px;   
+}
+
+.index_container{
+        position: relative;
+        width: 400px;
+        height: 200px;
+        border: 3px solid #73AD21;      
 }
