--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ table{
     justify-content: center
 }
 
+.container2 {
+    display: flex;
+    align-items: right;
+    justify-content: center
+}
 .img2 {
     width:500px;
     height:350px;
